impl of export and import commands, tests of them and menu qst